--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ ext {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-zookeeper-config'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
