--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-zookeeper-config'
+	implementation 'redis.clients:jedis:3.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
