--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-zookeeper-config'
 	implementation 'redis.clients:jedis:3.0.1'
+	implementation "org.apache.commons:commons-lang3"
+	implementation "org.apache.commons:commons-collections4:4.1"
+	implementation "org.apache.commons:commons-io:1.3.2"
+	implementation 'org.apache.zookeeper:zookeeper:3.4.13'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
